--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <title>KAIZEN 2021</title>
+        <link rel = "icon" href =
+"http://nss.iitd.ac.in/kaizen20/images/logo.png" 
+        type = "image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/comingsoon/style.css" />
         <link
@@ -46,7 +49,7 @@
                 margin: 16px 46px;
                 color: #fff;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 50px;
                 letter-spacing: 2px;
             }
 
@@ -122,6 +125,21 @@
                 padding-top: 5px;
                 font-size: 16px;
             }
+            footer {
+      position: fixed;
+      width: 100%;
+      bottom:0;
+  }
+
+  p.copyright {
+      position: fixed;
+      width: 100%;
+      color: #fff;
+      line-height: 40px;
+      font-size: 0.7em;
+      text-align: center;
+      bottom:0;
+  }
 
             @media (max-width: 786px) {
                 .logo {
@@ -180,7 +198,7 @@
                 <div class="menu-icon">
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
-                <div class="logo">NSS</div>
+                <div class="logo">KAIZEN</div>
             </nav>
         </header>
 
@@ -206,8 +224,10 @@
                     </div>
                 </div>
             </div>
+            <footer>
+                <p class="copyright">© 2021 NSS IITD All Rights Reserved</p>
+            </footer>
         </div>
         <script src="js/timer.js"></script>
     </body>
 </html>
-
