--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -345,9 +345,9 @@
                     </div>
                 </div>
                 <div style="margin-top: 50px;">
-                    <a href="https://www.facebook.com/kaizeniitd4society/" class="fa2 fa fa-facebook"></a>
-                    <a href="https://www.youtube.com/channel/UC3nq2Tsw8eruu22-MBr2_ow" class="fa2 fa fa-youtube"></a>
-                    <a href="https://www.instagram.com/nssiitd/" class="fa2 fa fa-instagram"></a>
+                    <a href="https://www.facebook.com/kaizeniitd4society/" class="fa2 fa fa-facebook" target="_blank"></a>
+                    <a href="https://www.youtube.com/channel/UC3nq2Tsw8eruu22-MBr2_ow" class="fa2 fa fa-youtube" target="_blank"></a>
+                    <a href="https://www.instagram.com/nssiitd/" class="fa2 fa fa-instagram" target="_blank"></a>
                 </div>
             </div>
             <footer>
