Minor tweeks in index page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <link rel="shortcut icon" href="images/logo.png" />
 
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/template.css" />
+        <link rel="stylesheet" type="text/css" href="css/welcome/welcome.css" />
     </head>
     <body>
+        <!-- ############################# -->
+        <!-- HEADER SECTION -->
+        <!-- ############################# -->
         <header id="nino-header">
             <div id="nino-headerInner">
                 <nav
@@ -36,7 +39,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="#"
-                                ><img src="images/logo.png"
+                                ><img src="public/images/logo.png"
                             /></a>
                         </div>
 
@@ -139,5 +142,8 @@
                 </section>
             </div>
         </header>
+
+        <!-- ############################# -->
+        <!-- ############################# -->
     </body>
 </html>
