--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
 
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="css/welcome/welcome.css" />
+
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@1&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+				<link rel="preconnect" href="https://fonts.gstatic.com">
+				<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+				<link rel="preconnect" href="https://fonts.gstatic.com">
+				<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer:ital@1&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="css/competitions.css">
+        <link rel="stylesheet" href="css/schedule.css">
+        <link rel="stylesheet" href="css/master.css">
     </head>
     <body>
         <!-- ############################# -->
@@ -145,5 +167,333 @@
 
         <!-- ############################# -->
         <!-- ############################# -->
+
+        <!-- ############################# -->
+      <!-- COMPETITIONS SECTION -->
+      <!-- ############################# -->
+
+      <div id="Competitions_Section">
+        <section id="comp_head">
+          <br><br><br><br><br><br><br><br>
+          <h2 align="center" id="comp_head_top" style="font-size:45px;">Competitions</h2>
+          <br><br>
+          <p id="comp_head_bottom">
+                    Kaizen'21 is organizing a bunch of competitions and informal events with exciting cash prizes and other awards.
+
+
+
+  					</p><br><br><br><br><br><br><br><br>
+        </section>
+
+
+        <section class="c_1">
+          <h1 id="comp_1">Climate Olympiad </h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/1.jpg" width="500"alt="">
+              </div>
+              <div class="col-sm" id=c_1_text>
+                Greetings from NSS IITD!<br>
+          NSS IITD  in collaboration with Climate Science (A London-based charity) at Kaizen'21 brings to you the first-ever global competition to find solutions to some climate-change-based problems by using teamwork & problem-solving skills. Qualifiers round will be held online during Kaizen. Qualifiers will compete further in Semi Finals and Finale. There's also a prize pool of $10,000 for the top three participants. Participate either solo or in a team.
+          <br><br>
+          <span>
+          <h3 id="instr_1_heading">Instructions for Registration</h3>
+          <ol>
+            <li>Visit <a href=" https://climatescience.org/olympiad/ "> https://climatescience.org/olympiad/ </a><ul>
+              <li id="instr_1_1_1">Choose Private event - NSS IIT Delhi</li>
+              <li id="instr_1_1_2">Use Password  -  NSSOlympiad21 </li>
+            </ul> </li>
+            <li>Join WhatsApp Group (Mandatory) <ul>
+              <li> <a href="https://linktr.ee/kaizen_CSOlympiad">https://linktr.ee/kaizen_CSOlympiad</a> </li>
+            </ul> </li>
+          </ol>
+          <br><br>
+          </span>
+          <span id="details_1">
+            <div class="card">
+              <div class="card-body">
+                Event Date: April 4, 2021 <br>
+          Event Time : 06:00 PM - 09:00 PM <br>
+          Deadline to register 25th March 11:59 PM <br><br>
+           <button type="button" class="btn btn-success"><a id="details_1_4"href="https://linktr.ee/kaizen_CSOlympiad">Click here for More details about the event</a></button>
+              </div>
+            </div>
+          </span>
+
+          </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+        <br><br><br><br><br>
+
+
+
+        <section class="c_2">
+          <h1 id="comp_2">Share to soothe</h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/2.jpg" width="500"alt="">
+              </div>
+              <div class="col-sm" id=c_2_text>
+                  Your thoughts are truly yours and some people are more than willing to listen to your story. We invite you to come be a part of Kaizen’21 - the annual social fest of IIT Delhi to enjoy the literary side of the heroes hidden among us.
+                  <br><br>
+                  Participate in “Share to soothe” - Kaizen’s Slam Poetry Competition!
+                  <br><br>
+          <span>
+          <h3 id="instr_2_heading">Instructions for Registration</h3>
+          <ol>
+            <li>Register on D2C for the event <ul>
+              <li id="list_comp_2"><button type="button" class="btn btn-primary"> <a id="comp_2_instr" href="http://nss.iitd.ac.in/l/sharetosoothe_d2c">Click here!</a></button></li>
+            </ul> </li>
+
+          </ol>
+          <br><br>
+          <span id="details_2">
+            <div class="card">
+              <div class="card-body">
+                Registration deadline - 28 March’21 11:59 PM <br>
+  	1st Round submission deadline - 28 March’21 11:59 PM <br><br>
+
+           <button type="button" class="btn btn-success"><a id="details_1_4"href="http://nss.iitd.ac.in/l/sharetosoothe_brochure">Click here for More details about the event</a></button>
+              </div>
+            </div>
+          </span>
+
+          </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+        <br><br><br><br><br>
+
+
+        <section class="c_3">
+          <h1 id="comp_3">Du Coeur </h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/3.jpeg" width="500"alt="">
+              </div>
+              <div class="col-sm" id=c_3_text>
+                Take refuge from your mundane life, be where you want to be and be what you want to be, travel the world, experience emotions, educate yourself and others! Come on all, and share your heart out!
+                <br><br>
+                Participate in ‘De Coeur’- Kaizen’s Creative Writing Competition!
+  <br><br>
+          <span>
+          <h3 id="instr_3_heading">Instructions for Registration</h3>
+          <ol>
+            <li>Register on D2C for the event <ul>
+              <li id="list_comp_2"><button type="button" class="btn btn-primary"> <a id="comp_2_instr" href="http://nss.iitd.ac.in/l/decoeur_d2c">Click here!</a></button></li>
+            </ul> </li>
+
+          </ol>
+          <br><br>
+          </span>
+          <span id="details_1">
+            <div class="card">
+              <div class="card-body">
+                Submission Deadline : 29 March’21 11:59 PM <br><br>
+           <button type="button" class="btn btn-success"><a id="details_1_4"href="http://nss.iitd.ac.in/l/decoeur_brochure">Click here for More details about the event</a></button>
+              </div>
+            </div>
+          </span>
+
+          </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+        <br><br><br><br><br>
+
+
+        <section class="c_4">
+          <h1 id="comp_4">Climate action Plan</h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/4.png" width="500"alt="">
+              </div>
+              <div class="col-sm" id=c_4_text>
+                Participate in Kaizen’s Climate Action Plan Competition! Use the En-ROADS Climate Solutions Simulator, to propose a plan to mitigate global warming to the internationally agreed target of below 2°C by 2100 and win exciting prizes!
+
+  <br><br>
+          <span>
+          <h3 id="instr_4_heading">Instructions for Registration</h3>
+          <ol>
+            <li>Register on D2C for the event <ul>
+              <li id="list_comp_2"><button type="button" class="btn btn-primary"> <a id="comp_2_instr" href="http://nss.iitd.ac.in/l/clap_d2c">Click here!</a></button></li>
+            </ul> </li>
+
+          </ol>
+          <br><br>
+          </span>
+          <span id="details_1">
+            <div class="card">
+              <div class="card-body">
+                Registration deadline - 31st March’21 12:00 <br>
+  1st Round Submission deadline - 31st March’21 23:59<br><br>
+           <button type="button" class="btn btn-success"><a id="details_1_4"href="http://nss.iitd.ac.in/l/clap_brochure">Click here for More details about the event</a></button>
+              </div>
+            </div>
+          </span>
+
+          </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+        <br><br><br><br><br>
+
+
+
+        <section class="c_5">
+          <h1 id="comp_5">Social Innovation Challenge </h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/5.png" width="500"alt="">
+              </div>
+              <div class="col-sm" id=c_4_text>
+                About 1 lakh tonnes of solid waste is generated in India per day. With increasing populations, changing policy requirements, new sustainability and recycling goals and improved technology departments, this is only going to overshoot unless something concrete is done about it.
+  NSS IIT Delhi invites you to its Ideathon- a Social Innovation Challenge 3.0 under the aegis of Kaizen’21!
+  <br><br>
+          <span>
+          <h3 id="instr_5_heading">Instructions for Registration</h3>
+          <ol>
+            <li>Register on D2C for the event <ul>
+              <li id="list_comp_2"><button type="button" class="btn btn-primary"> <a id="comp_2_instr" href="http://nss.iitd.ac.in/l/sic_d2c">Click here!</a></button></li>
+            </ul> </li>
+
+          </ol>
+          <br><br>
+          </span>
+          <span id="details_1">
+            <div class="card">
+              <div class="card-body">
+                Registration deadline - 31st March’21 12:00 <br>
+  1st Round Submission deadline - 31st March’21 23:59<br><br>
+           <button type="button" class="btn btn-success"><a id="details_1_4"href="http://nss.iitd.ac.in/l/sic_brochure">Click here for More details about the event</a></button>
+              </div>
+            </div>
+          </span>
+
+          </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+        <br><br><br><br><br>
+        <hr>
+      </div>
+
+
+      <!-- ############################# -->
+      <!-- ############################# -->
+
+
+      <!-- ############################# -->
+      <!-- SCHEDULE SECTION -->
+      <!-- ############################# -->
+
+      <div id="Schedule">
+        <div class="schedule">
+  				<h2 id="r1_schedule">When is all this happening ?</h2>
+  				<h2 id="r2_schedule">SCHEDULE</h2>
+
+  				<br>
+  				<img id="img" src="images/schedule.png" alt="">
+  			</div>
+
+  			<br><br>
+  			<hr>
+      </div>
+
+
+      <!-- ############################# -->
+      <!-- ############################# -->
+
+      <!-- ############################# -->
+      <!-- FOOTER SECTION -->
+      <!-- ############################# -->
+
+      <div id="footer_section">
+        <footer>
+          <div class="row">
+    <div class="col-sm-4">
+      <h3><b id="QUICK">QUICK LINKS</b></h3>
+      <div class="col_1_1">
+        <ul>
+          <li><a href="#">BROCHURE</a></li>
+          <li><a href="http://nss.iitd.ac.in" id="we">NSS IITD</a></li>
+          <li><a href="http://nss.iitd.ac.in/#!/download_magazine">NSS MAGAZINE</a></li>
+          <li><a href="http://nssiitd.blogspot.in/">BLOGSPOT</a></li>
+
+        </ul>
+      </div>
+      <hr>
+      <div class="col_1_2">
+        <form class="emailupdates" action="index.html" method="post">
+          <label>Get Email Updates</label>
+          <br>
+          <input type="email" name="email" value="" placeholder="Enter E-mail">
+          <button type="button" class="btn btn-danger">Subscribe</button>
+        </form>
+
+      </div>
+      <hr>
+
+      <h3> <b><a id="Achivements" href="https://drive.google.com/file/d/1srJramfpmURf6aLHmEhdeBc94b3eqiOP/view?usp=sharing">Our Achivements</a></b></h3>
+      <hr>
+
+      <h4><b><a href="http://nss.iitd.ac.in/#!/about_nss" id="about_us">About Us</a></b></h4>
+    </div>
+    <div class="col-sm-4">
+      <div class="col_2_1">
+        <form class="form" action="index.html" method="post">
+          <h3><b id="QUERY">QUERIES</b></h3>
+          <input type="text" name="" value="" size="40" placeholder="Your Sweet Name">
+          <br>
+          <br>
+          <input type="email" name="" value="" size="40" placeholder="Your Email">
+          <br>
+          <br>
+          <label>QUERY</label>
+          <textarea name="query" rows="4" cols="40" placeholder="Enter your Query"></textarea>
+          <br>
+          <button id="submit_btn" type="button" class="btn btn-warning">Submit</button>
+        </form>
+
+
+
+      </div>
+      <hr>
+      <a  href="https://www.facebook.com/groups/nssiitd/"><img id="fblogo" src="https://image.flaticon.com/icons/png/512/124/124010.png" alt=""></a>
+      <a href="https://www.instagram.com/nssiitd/?hl=en"><img id="instalogo" src="https://i.pinimg.com/originals/72/a3/d9/72a3d9408d41335f39e9f014dc35cf44.jpg" alt=""></a>
+      <a href="https://twitter.com/nss_iitd?lang=en"><img id="twitterlogo"src="https://icons-for-free.com/iconfiles/png/512/logo+twitter+twitter+logo+icon-1320190502069263658.png" alt=""></a>
+      <img src="" alt="">
+    </div>
+    <div class="col-sm-4">
+      <h3 id="fb"><b>facebook</b></h3>
+      <div class="col_3_1" >
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fkaizeniitd4society%2F&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="auto" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+
+    </div>
+  </div>
+  </div>
+  <hr>
+  <div class="copyright">Copyright &copy; 2021 <a id="nss"target="_blank" href="http://nss.iitd.ac.in/" title="KAIZEN NSS IITD">NSS IITD</a>. All Rights Reserved. <br/> <img src="http://nss.iitd.ac.in/images/NSS.webp" height="55px" width="auto"></div>
+    </div>
+  </footer>
+      </div>
+      <!-- ############################# -->
+      <!-- ############################# -->
     </body>
 </html>
